--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 html, body {
-background: #181818; font-family: Times, helvetica, arial, sans-serif; font-size: 16px; color: #222;
+background: #353535; font-family: Times, helvetica, arial, sans-serif; font-size: 16px; color: #222;
 }
 
 h1 {
     color: darkred;
-    text-align: center:
+    text-align: center;
 }
